--- a/lib/style.css
+++ b/lib/style.css
@@ -1,34 +1,41 @@
 * {
     margin: 0;
     padding: 0;
+    outline-style: none; /* remove interior borders on input&button --> default behavior of some browsers */
 }
 
 body {
     font-family: "Raleway", sans-serif;
     font-size: 15px;
     line-height: 1.5em;
+    --black_color: black; /* you can change the colors flagship site without going over all the code: optimization */
+    --white_color: white;
+    --first_color: #0065FC;
+    --second_color: #DEEBFF;
+    --third_color: #F2F2F2;
+    --four_color: #D9D9D9;
+    color: var(--basic_color, black); /* need a basic color for the entire site */
 }
 
+button:hover {
+    cursor: pointer;
+}
 .fa, .fas, .far {
     font-family: "Font Awesome 5 Free";
+    color: var(--first_color, #0065FC); /* add an extra color in case of the var does not working */
 }
-
-section, footer {
-    background-color: green;
-}
-
 
 #bloc_page {
     max-width: 1440px;
     margin: auto;
 }
 
-a {
+a, a:visited, a:focus {
     text-decoration: none;
-    color: black;
+    color: var(--black_color, black)
 }
 a:hover {
-    color: #0065FC;
+    color: var(--first_color, black)
 }
 
 li {
@@ -43,11 +50,14 @@ h2 {
     font-size: 1.2em;
 }
 
-p {
-    margin: 10px 0 10px 0;
+h1, h2, p {
+    margin: 35px 0 0 0;
 }
 
-
+p {
+    margin: 10px 0 10px 0;
+    font-size: 0.9em;
+}
 
 
     /* HEADER  */
@@ -78,7 +88,7 @@ header img {
     /* NAVBAR */
 #inscription {
     font-weight: bold;
-    color: #0065FC;
+    color: var(--first_color, #0065FC);
 }
 
 #inscription:hover {
@@ -139,40 +149,158 @@ header img {
 /* DIV SEARCHING TOOL */
 
 #searching_tool {
-    padding: 30px 25px 30px 25px;
+    margin: 20px;
 }
 
-#maps {
+    @media screen and (min-width: 900px) {
+        #searching_tool {
+            margin: 0 50px 0 50px;
+        }
+    }
+
+#search_form, .filter_form {
     display: flex;
     flex-direction: row;
+    height: 48px;
+}
+
+#search_input, #search_button, .filter_button {
+    font-family: "Raleway";
+    font-size: 1em;
+    font-weight: bold;
+}
+
+#search_icon, .filter_icon {
+    width: 50px;
+    max-height: 50px;
+    text-align: center;
+    padding-top: 15px;
+    border-radius: 10px;
+    margin: -1px
+}
+
+#search_button {
+    min-height: 50px;
+    margin-top: -1px;
+  }
+
+    /* RECHERCHE PAR VILLE */
+#search_form {
     justify-content: space-between;
-    background-color: white;
-    width: 330px;
-    height: 50px;
-    border: purple 2px solid;
+    border: var(--third_color, #F2F2F2) 1px solid;
     border-radius: 15px;
+    margin: 20px 0 20px 0;
+    max-width: fit-content;
 }
 
-.searching_tool_icon {
-    background-color: #F2F2F2;
-    border-radius: 15px;
-    padding: 15px;
-    border: 2px #F2F2F2 solid;
+#search_icon {
+    background-color: var(--third_color, #F2F2F2);
 }
 
-#searching_tool_icon, #input_search {
-    height: 50px;
+#search_icon i {
+    color: var(--black_color, black);
 }
-#input_city {
+
+#search_button, #search_button i {
+    color: var(--white_color, white);
+}
+
+#search_button {
+    min-width: 50px;
+    max-height: 50px;
+    border-radius: 0 15px 15px 0;
+    background-color: var(--first_color, #0065FC);
+    border: 1px solid var(--first_color, #0065FC);
+}
+
+#search_button:hover, #search_button:visited, #search_button:focus, #search_button:active {
+    background-color: var(--second_color, #D9D9D9);
+    outline-style: 1px solid var(--first_color, #0065FC);
+}
+#search_input {
+    border: none;
+    width: 230px;
+    padding-left: 5px;
+}
+
+    @media screen and (max-width: 899px) {        
+        #search_web {
+            display: none;
+        } 
+    }
+
+    @media screen and (min-width: 900px) {
+        #search_button {
+            padding: 0 20px 0 20px;
+        }
+        #search_mobile {
+            display: none;
+        }
+    }
+
+    /* FILTRES DE PREFERENCES */
+
+#filter_list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 15px 0 15px 0;
+}
+
+    @media screen and (min-width: 900px) {
+        #filters {
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            align-items: baseline;
+        }
+    }  
+
+h2 {
+    padding: 0 15px 0 0;
+}
+
+.filter_form {
+    margin: 0 12px 10px 0;
+    border: var(--third_color, #F2F2F2) 2px solid;
+}
+.filter_form, .filter_button {
+    width: fit-content;
+    border-radius: 50px;
+    background-color: var(--white_color, white);
+}
+
+.filter_icon {
+    border-radius: 25px;
+    width: 50px;
+    background-color: var(--second_color, #DEEBFF);
+    margin: -2px 0 -2px -2px;
+}
+
+.filter_button {
     border: none;
 }
 
-#input_search {
-    border-radius: 0 15px 15px 0;
-    background-color: #0065FC;
-    color: white;
+.filter_button:hover, .filter_button:focus, .filter_button:active, .filter_button:visited {
+    text-shadow: 1px 1px 2px #D9D9D9;
 }
 
+.filter_choice {
+    padding: 0 10px 0 10px;
+}
+
+#info_icon i {
+    border: var(--third_color, #F2F2F2) 1px solid;
+    padding: 5px 8px 5px 8px;
+    text-align: center;
+    border-radius: 50%;
+    margin-right: 5px;
+}
+
+
+
+
+    /* RECHERCHE PAR FILTRES */
 
 
 /* SECTIONS */
