--- a/lib/style.css
+++ b/lib/style.css
@@ -48,10 +48,13 @@ h1 {
 
 h2 {
     font-size: 1.2em;
+    padding: 10px 15px 10px 0;
 }
 
-h1, h2, p {
-    margin: 35px 0 0 0;
+h3 {
+    font-size: 1.3em;
+    font-weight: bold;
+    padding: 10px 15px 10px 0;
 }
 
 p {
@@ -203,6 +206,11 @@ header img {
 
 #search_button, #search_button i {
     color: var(--white_color, white);
+    width: 50px;
+    height: 50px;
+}
+#search_button:hover, #search_button i:hover {
+    color: var(--first_color, #0065FC);
 }
 
 #search_button {
@@ -213,10 +221,11 @@ header img {
     border: 1px solid var(--first_color, #0065FC);
 }
 
-#search_button:hover, #search_button:visited, #search_button:focus, #search_button:active {
-    background-color: var(--second_color, #D9D9D9);
-    outline-style: 1px solid var(--first_color, #0065FC);
+#search_button:hover {
+    background-color: var(--second_color, #DEEBFF);
+    border: none;
 }
+
 #search_input {
     border: none;
     width: 230px;
@@ -226,12 +235,16 @@ header img {
     @media screen and (max-width: 899px) {        
         #search_web {
             display: none;
-        } 
+        }
+        #lens_icon {
+            padding-top: 15px;
+        }
     }
 
     @media screen and (min-width: 900px) {
         #search_button {
             padding: 0 20px 0 20px;
+            min-width: 130px;
         }
         #search_mobile {
             display: none;
@@ -256,14 +269,15 @@ header img {
         }
     }  
 
-h2 {
-    padding: 0 15px 0 0;
-}
-
 .filter_form {
     margin: 0 12px 10px 0;
     border: var(--third_color, #F2F2F2) 2px solid;
 }
+.filter_form:hover, .filter_form:active, .filter_form:focus, .filter_form:visited {
+    border: 2px solid var(--first_color, #0065FC);
+    color: var(--first_color, #0065FC)
+}
+
 .filter_form, .filter_button {
     width: fit-content;
     border-radius: 50px;
@@ -281,10 +295,6 @@ h2 {
     border: none;
 }
 
-.filter_button:hover, .filter_button:focus, .filter_button:active, .filter_button:visited {
-    text-shadow: 1px 1px 2px #D9D9D9;
-}
-
 .filter_choice {
     padding: 0 10px 0 10px;
 }
@@ -297,160 +307,87 @@ h2 {
     margin-right: 5px;
 }
 
-
-
-
-    /* RECHERCHE PAR FILTRES */
-
-
-/* SECTIONS */
-h2, #popular_room_list .fas {
-    font-size: 1.2em;
-    color: black;
+#activities, #hebergements {
+    display: none;
 }
-#popular .fas {
-    color: #0065FC;
-    font-size: 0.9em;
-}
+
+
+    /* SECTION HOSTING + ACTIVITES + ASIDE */
+
 .star_grey {
-    color: #F2F2F2;
-}
-section a {
-    font-weight: bolder;
+    color: var(--four_color, #D9D9D9);
 }
 
-    /* ARTICLES + ASIDE */
-#rooms_list, #activity_list {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-.room, .activity {
-    height: 175px;
-}
-.room, .popular_room {
-    border: white solid 5px;
-}
-.room, .activity, .popular_room {
-    border-radius: 25px;
-    overflow: hidden;
-    background-color: white;
-    box-shadow: 2px 1px 10px #555;
-    margin-bottom: 25px;
-}
-.room_picture, .activity_picture, .popular_picture {
-    overflow: hidden;
-}
-.room_description, .activity_description, .popular_room_description {
-    line-height: 1.3em;
-    margin-left: 15px;
-    font-size: 0.8em;
-}
-.room_name, .activity_name, .popular_name {
-    font-size: 1.2em;
-}
-.room_bolder, .activity_bolder, .popular_bolder {
-    font-weight: bolder;
-}
-    @media screen and (max-width: 700px) {
-        #activities, #popular, #hebergement {
-            padding: 25px;
-        }
-    .room, .activity, .popular_room {
-            min-width: 250px;
-            margin-bottom: 15px;
-        }
-    }
-    @media screen and (min-width: 701px) {
-        #popular_and_hebergement {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            margin: 0;
-            padding: 0 50px 0 50px;
-        }
-        #hebergement, #popular {
-            background-color: #F2F2F2;
-            padding: 25px
-        }
-        #hebergement, #activities {
-            border-radius: 25px;
-        }
-        .room {
-            width: 220px;
-        }
-    }
-    /* ARTICLE HEBERGEMENTS */
-.room_picture {
-    max-height: 110px;
-}
-    @media screen and (min-width: 701px) {
-        #hebergement {
-            width: 60%;
-        }
-    }
-    /* ARTICLE ACTIVITES */
-.activity_name {
-    padding: 15px;
-}
-.activity_picture {
-    max-height: 120px;
-}
-    @media screen and (min-width: 701px) {
-        #activities {
-            margin: 40px;
-        }
-        #activities h2 {
-            padding: 0 0 0 50px;
-        }
-        .activity {
-            width: 300px;
-            margin: 10px;
-        }
-    }
-    /* ASIDE */
+
+    /*ASIDE POPULAR*/
 aside {
     background-color: #F2F2F2;
+    padding: 35px 20px 35px 20px;
 }
+
+    @media screen and (min-width: 900px) {
+        aside {
+            margin: 20px 40px 20px 40px;
+            padding: 50px;
+            border-radius: 25px;
+            max-width: fit-content;
+            order: 2;
+        }
+    }
+
+#popular_room_list {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#popular_room_list i {
+    color: var(--black_color, black);
+}
+
 .popular_room {
     display: flex;
+    max-width: 335px;
+    height: 145px;
+    border: 4px var(--white_color, white) solid;
+    border-radius: 25px;
+    overflow: hidden;
+    margin: 10px 0 10px 0;
+    padding: 0;
+    box-shadow: 1px 1px 12px var(--four_color, #D9D9D9);
+    background-color: var(--white_color, white);
+} 
+
+@media screen and (min-width: 900px) {
+    .popular_room {
+        max-width: 345px;
+        margin: 30px 0 30px 0;
+    }
+}
+
+.popular_room:hover {
+    box-shadow: 1px 1px 12px #555;
+    cursor: zoom-in;
 }
 .popular_room_picture {
-    width: 120px;
-    overflow: hidden;
+    width: 135px;
 }
+
 .popular_room_picture img {
-    min-height: 100%;
-    min-width: 100%;
+    object-fit: cover;
+    width: 135px;
+    height: 100%;
 }
+
 .popular_room_description {
-    width: 175px;
-    padding: 0 0 0 15px;
+    width: 212px;
+    line-height: 1em;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
-    @media screen and (max-width: 700px) {
-        .popular_room {
-            height: 150px;
-            margin: 25px 0 15px 0;
-        }
-        .popular_room_description i {
-            margin-top: 55px;
-        }
-    }
-    @media screen and (min-width: 701px) {
-        aside {
-            border-radius: 25px;
-            width: 30%;
-        }
-        .popular_room {
-            max-width: 350px;
-            height: 110px;
-            margin: 25px;
-        }
-        .popular_room_description i {
-            margin-top: 10px;
-        }
-    }
+
 
     /* FOOTER  */
 footer {
